---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2022-07-16
  Changes:
    - ru locale thanks to Pergamum663
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2022-07-16
  Changes:
    - Refractory: When Tin mod is used, glass should not have a refractory recipe at all.
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2022-07-06
  Fixes:
    - Attempt to fix an issue with duplicate ingredients in refractory recipes
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2022-07-05
  Changes:
    - Support for Tin
    - Add basic founding recipe category. Pre-founding-tech recipes in this category can be crafted
      by hand. In some mod loadouts there will indeed be recipes that can only be crafted by hand
      until founding is researched.
    - Minor restructure of refractory recipes (should have no effect)
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2022-07-01
  Changes:
    - Support for Space Exploration 0.6
    - Japanese (ja) locale thanks to sakuro
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2022-06-23
  Fixes:
    - In minimal mode, use industrial furnace if available
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2022-02-22
  Features:
    - Korean (ko) l10n thanks to x2605
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2022-02-17
  Fixes:
    - K2+SE rare metal + vulcanite + refractory now works